--- a/cube-timer/qml.qrc
+++ b/cube-timer/qml.qrc
@@ -4,5 +4,11 @@
         <file>components/TimeCounter.qml</file>
         <file>pages/MainPage.qml</file>
         <file>pages/MainPageForm.ui.qml</file>
+        <file>pages/AboutPage.qml</file>
+        <file>pages/AboutPageForm.ui.qml</file>
+        <file>pages/SettingsPage.qml</file>
+        <file>pages/SettingsPageForm.ui.qml</file>
+        <file>pages/ViewTimesPage.qml</file>
+        <file>pages/ViewTimesPageForm.ui.qml</file>
     </qresource>
 </RCC>
